//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  sentMessages Message [not null]
  receivedMessages Message [not null]
  trips Trip [not null]
  bookings Booking [not null]
  sentReview Review [not null]
  receiverReview Review [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Message {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  text String [not null]
  senderId String [not null]
  receiverId String [not null]
  sender User [not null]
  receiver User [not null]
}

Table Trip {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  organizerId String [not null]
  organizer User [not null]
  destination String [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  cost Float [not null]
  maxParticipants Int [not null]
  currentParticipants Int [not null]
  itinerary String [not null]
  title String [not null]
  isPublished Boolean [not null, default: false]
  bookings Booking [not null]
  Review Review [not null]
}

Table Booking {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status BookingStatus [not null, default: 'OPEN']
  user User [not null]
  userId String [not null]
  trip Trip [not null]
  tripId String [not null]
}

Table Review {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  rating Int [not null]
  message String [not null]
  author User [not null]
  authorId String [not null]
  organizer User
  organizerId String
  trip Trip
  tripId String
}

Enum Role {
  ADMIN
  USER
  ORGANIZER
  GUIDE
}

Enum BookingStatus {
  OPEN
  ACCEPTED
  REJECTED
  CANCELLED
}

Ref: Post.authorId > User.id

Ref: Message.senderId > User.id

Ref: Message.receiverId > User.id

Ref: Trip.organizerId > User.id

Ref: Booking.userId > User.id [delete: Cascade]

Ref: Booking.tripId > Trip.id [delete: Cascade]

Ref: Review.authorId > User.id [delete: Cascade]

Ref: Review.organizerId > User.id [delete: Cascade]

Ref: Review.tripId > Trip.id [delete: Cascade]